--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -52,7 +52,7 @@
                     <div class="nav">
                         <a href="/" class="init">Inicio</a>
                         <a href="/index/" class="query">Consulta</a>
-                        <a href="/acerca/" class="about">Acerca</a>
+                        <a href="/ayuda/" class="about example5">Acerca</a>
                     </div>
                     <div class="clean"></div>
                 </div>
@@ -100,9 +100,8 @@
         <div id="footer">
             <div class="wrapper">
                 <div class="organizaciones">
-                    <span class="title">Organizaciones</span><br>
-                    <span class="zonas">Zona Alta &nbsp;|</span>&nbsp;UNAG&nbsp;<span class="zonas">&bull;</span>&nbsp;PCAC&nbsp;<span class="zonas">&bull;</span>&nbsp;ADDAC<br>
-                    <span class="zonas">Zona Seca |</span>&nbsp;ASODEL&nbsp;<span class="zonas">&bull;</span>&nbsp;APRODESE&nbsp;<span class="zonas">&bull;</span>&nbsp;FLM&nbsp;
+                    <span class="title">Organizaciones de:</span><br>
+                    <span class="zonas">Zona Alta &nbsp;| Zona Seca</span>
                 </div>
                 <div class="made">
                     <div class="developed">
