--- a/monitoreo/templates/simas/mitigacion.html
+++ b/monitoreo/templates/simas/mitigacion.html
@@ -1,14 +1,79 @@
 {% extends "base.html"%}
 {%load unslugify %}
+{%block extra_header%}
+<script type="text/javascript" src="{{MEDIA_URL}}js/highcharts.js"></script>
+<script type="text/javascript" src="{{MEDIA_URL}}js/exporting.js"></script>
+<script type="text/javascript">
+    var chart;
+    $(document).ready(function() {
+        chart = new Highcharts.Chart({
+            chart: {
+                renderTo: 'container',
+                defaultSeriesType: 'column'
+            },
+            title: {
+                text: 'Mitigación de Riesgos'
+            },
+            subtitle: {
+                text: ''
+            },
+            xAxis: {
+                categories: [
+                    'Opciones'
+                ]
+            },
+            yAxis: {
+                min: 0,
+                title: {
+                    text: 'Frecuencias'
+                }
+            },
+            
+            tooltip: {
+                formatter: function() {
+                    return ''+
+                        this.series.name +': '+ this.y +'';
+                }
+            },
+            plotOptions: {
+                column: {
+                    groupPadding: 0,
+                    pointPadding: 0.9,
+                    borderWidth: 0
+                },
+                series: {
+                    pointWidth: 55,
+                    minPointLength : 1
+                }
+            },
+            series: [{% for key, value in tabla.items %}
+                {
+                    name: '{{key|unslugify}}',
+                    data: [{{value.mitigacion}}],
+                    dataLabels: {
+                        enabled: true,
+                        rotation: 0,
+                        color: '#632D00',
+                        align: 'center',
+                        x: -3,
+                        y: 0,
+                            formatter: function() {
+                                return this.y + '';
+                                                  },
+                        style: {
+                            font: 'normal 13px Verdana, sans-serif'
+                                }
+                                }
+                },
+                {% endfor %}]
+        });
+    });
+</script>
+{%endblock%}
 {% block titulo %}
 Subindicador Mitigación de Riesgos
 <div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
 {% endblock%}
-{%block extra_header%}
-<script type="text/javascript">
-
-</script>
-{%endblock%}
 {% block contenido %}
 
 {% include "nav_riesgos.html" %}
@@ -19,7 +84,7 @@ Subindicador Mitigación de Riesgos
 </div>
 
 <div class="contenido">
-    <table>
+    <table style="width:100%;">
         <caption>Mitigación de los Riesgos</caption>
         <thead>
             <tr>
@@ -38,5 +103,9 @@ Subindicador Mitigación de Riesgos
             {%endfor%}
         </tbody>
     </table>
+<div class="contenedor">
+        <div class="grafico-title"></div>
+        <div id="container"></div>
+</div>
 </div>
 {% endblock %}
