--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -8,6 +8,7 @@ Subindicador Ingresos
 {% block extra_header %}
 <script type="text/javascript" src="{{MEDIA_URL}}js/highcharts.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}js/exporting.js"></script>
+<script src="{{MEDIA_URL}}js/jquery.tablesorter.min.js"></script>
 <script type="text/javascript">
     var activo = 0;
     function click_callback(id){
@@ -252,7 +253,7 @@ function Grafo10(){
         </div>
     </div>
     <div id="grafo"></div>
-     <table>
+     <table id="sortTableExample">
         <caption>Agroforestales</caption>
         <thead>
             <tr>
@@ -287,7 +288,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table>
+    <table id="sortTableExample2">
         <caption>Forestales</caption>
         <thead>
             <tr>
@@ -322,7 +323,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table>
+    <table id="sortTableExample">
         <caption>Granos básicos</caption>
         <thead>
             <tr>
@@ -357,7 +358,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table>
+    <table id="sortTableExample">
         <caption>Ganado mayor</caption>
         <thead>
             <tr>
@@ -392,7 +393,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table>
+    <table id="sortTableExample">
         <caption>Animales de patio</caption>
         <thead>
             <tr>
@@ -427,7 +428,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table>
+    <table id="sortTableExample">
         <caption>Hortalizas y frutas</caption>
         <thead>
             <tr>
@@ -462,7 +463,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table>
+    <table id="sortTableExample">
         <caption>Musaceas</caption>
         <thead>
             <tr>
@@ -497,7 +498,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table>
+    <table id="sortTableExample">
         <caption>Raíces y tubérculos</caption>
         <thead>
             <tr>
@@ -537,7 +538,7 @@ function Grafo10(){
     </table>
 </div>
     <br><div class="subindicador">INGRESO  &raquo; Los Otros Ingresos familiares <a href="#" class="exportar"></a></div><br>
-    <table>
+    <table id="sortTableExample">
         <caption></caption>
         <thead>
             <tr>
@@ -584,6 +585,12 @@ function Grafo10(){
             <th>{{respuesta.total_neto|intcomma}}</th>
         </tr>
     </table>
+    
+<script type="text/javascript">
+  $(function() {
+    $("table#sortTableExample").tablesorter( {sortList: [[0,0], [1,0]]} );
+    $("table#sortTableExample2").tablesorter( {sortList: [[0,0], [1,0]]} );
+  });
+</script>
 </div>
-
 {%endblock%}
